--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
+    "glamor": "^2.20.40",
     "lodash": "^4.17.21",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3"
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "^3.3.3",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
